# krita-linesampler

./: CMakeLists.txt  LineSampler.cc  LineSampler.h  LineSamplerConfig.cc  LineSamplerConfig.h  LineSamplerWdg.cc  LineSamplerWdg.h  LineSamplerWdgBase.ui  Makefile.am  kritaLineSampler.desktop
